--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
-    
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -19,12 +14,16 @@
     "isolatedModules": true,
     "jsx": "preserve",
 
+    "baseUrl": ".",                       // ← BUNU EKLE
+    "paths": {
+      "@/*": ["src/*"]                   // ← BUNU EKLE
+    },
+
     "plugins": [
       {
         "name": "next"
       }
     ]
-    
   },
   "include": [
     "next-env.d.ts",
@@ -32,8 +31,5 @@
     "**/*.ts",
     "**/*.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
-
