--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,16 @@
 annotated-types==0.7.0
 anyio==4.9.0
+beautifulsoup4==4.13.4
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+cssselect==1.3.0
 exceptiongroup==1.3.0
 fastapi==0.110.0
+feedfinder2==0.0.4
+feedparser==6.0.11
 filelock==3.18.0
 fsspec==2025.7.0
 google-ai-generativelanguage==0.6.2
@@ -22,15 +26,21 @@ h11==0.16.0
 httplib2==0.22.0
 httptools==0.6.4
 idna==3.10
+jieba3k==0.35.1
 Jinja2==3.1.6
+joblib==1.5.1
 llvmlite==0.43.0
+lxml==6.0.0
 MarkupSafe==3.0.2
 more-itertools==10.7.0
 mpmath==1.3.0
 networkx==3.2.1
+newspaper3k==0.2.8
+nltk==3.9.1
 numba==0.60.0
 numpy==2.0.2
 openai-whisper==20250625
+pillow==11.3.0
 proto-plus==1.26.1
 protobuf==4.25.8
 pyasn1==0.6.1
@@ -39,16 +49,23 @@ pydantic==2.7.1
 pydantic_core==2.18.2
 pyparsing==3.2.3
 PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 regex==2025.7.34
 requests==2.32.4
+requests-file==2.1.0
 rsa==4.9.1
+sgmllib3k==1.0.0
+six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 starlette==0.36.3
 sympy==1.14.0
 tiktoken==0.9.0
+tinysegmenter==0.3
+tldextract==5.3.0
 torch==2.7.1
 tqdm==4.67.1
 typing_extensions==4.14.1
